# Cinescore

./: README.md  docker-compose.dev.yml  docker-compose.yml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
api/migrations/: 20251210202052_create_users_table.sql  20251213040555_create_interactions.sql
api/src/: discover.rs  frontend_models.rs  interactions.rs  lib.rs  tmdb_models.rs
api/src/auth/: mod.rs  routes.rs
api/src/frontend_models/: common.rs  credits.rs  mod.rs  movies.rs  people.rs  socials.rs
api/src/tmdb/: client.rs  mod.rs  models.rs
api/src/tmdb/models/: common.rs  mod.rs  movie.rs  pagination.rs  person.rs  shared.rs  socials.rs
api/src/tmdb/queries/: common.rs  mod.rs  movie_details.rs  movie_lists.rs  people_details.rs  search.rs  traits.rs
cinescore/: Dockerfile  biome.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
cinescore/src/: App.css  App.tsx  index.css  types.ts
cinescore/src/components/: ActorComponents.tsx  CategoryCarousel.tsx  MovieDraggable.tsx  MoviePoster.tsx  ProfileDropdown.tsx  SearchDropdown.tsx  TierRow.tsx
cinescore/src/pages/: ActorBrowse.tsx  ActorSearchResults.tsx  ActorsPage.tsx  ForgotPasswordPage.tsx  HomePage.tsx  MoviePage.tsx  ProfilePage.tsx  SearchResults.tsx  SignInPage.tsx  SignUpPage.tsx  TierListPage.tsx
nginx/: Dockerfile  nginx.default.conf  nginx.dev.conf
