[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "standalone"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_path_to_error = "0.1.16"
serde_repr = "0.1.19"
thiserror = "2.0.11"
tokio = { version = "1.28.2", features = ["full"] }

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"
doc_markdown = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
