[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "standalone"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["json"] }
axum-login = "0.18.0"
chrono = { version = "0.4.39", default-features = false, features = [
  "now",
  "serde",
] }
clap = { version = "4.5.27", features = ["cargo", "derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_path_to_error = "0.1.16"
serde_repr = "0.1.19"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "time",
  "migrate",
] }
thiserror = "2.0.11"
tokio = { version = "1.28.2", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
doc_markdown = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
